clusters/saradomin/infrastructure/adguard-home-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: adguard-home
  labels:
    kubernetes.io/service-name: adguard-home
    endpointslice.kubernetes.io/managed-by: kustomize
addressType: IPv4
ports:
  - name: http
    port: 3000
    protocol: TCP
endpoints:
  - addresses:
      - 10.10.0.10
